# dll_inject_demo

./: CMakeLists.txt  README.md  build.bat  build_java.bat  quick_start.bat
src/common/: logger.cpp  utils.cpp
src/dll/: dllmain.cpp  hot_reload.cpp  jar_loader.cpp  jni_bridge.cpp  security_utils.cpp
src/include/: common.h  dll_injector.h  hot_reload.h  jar_loader.h  security_utils.h
src/injector/: dll_injector.cpp  main.cpp  process_utils.cpp
test/cpp/: CMakeLists.txt  test_error_handling.cpp  test_jar_loader.cpp  test_main.cpp  test_security_utils.cpp
test/java/: Main.java  NativeBridge.java  TargetApp.java
